=====================================================================
	Change Log
	Genmod

	This and other information can be found online at
	http://www.genmod.net/

	# $Id$
=====================================================================

Version 2.0 beta 2
- Fixed invalid ID throws SQL error (sjouke)
- Added imageviewer resize image to fit in window (sjouke)
- Added add source info to newly created families (sjouke)
- Fixed link to main pic is wrong in find media (sjouke)
- Fixed reorder fams sorts on old marriage data (sjouke)
- Fixed Family marriage fact doesn't return changed data (sjouke)
- Fixed DATA:TEXT not printed in source citations (sjouke)
- Fixed edit fam fact from indipage, fact count error (sjouke)
- Fixed TIME input field not for every DATE in edit (sjouke)
- Added number of files per folder in media management (sjouke)
- Moved media types to MediaFS class (sjouke)
- Added gendex file generation script (sjouke)
- Fixed upcoming events, alive only, displays marriages of dead people (sjouke)
- Added adminmenu class for unified admin menus (sjouke)
- Fixed cleanup messages older than option (sjouke)
- Fixed facts with only year don't sort properly (sjouke)
- Added option to exclude IP(range) from require authentication or not (sjouke)
- Fixed find doesn't accept 1 chinese character as input (sjouke)
- Fixed window.opener.location.reload (sjouke)
- Fixed options jumping around in index edit (sjouke)
- Fixed space before VFS in footer text (sjouke)
- Added check for L1 sources if no L2 are found in sanity check (sjouke)
- Fixed wrong display of changes on new, unapproved indi (sjouke)
- Removed debug code from edit_interface (sjouke)
- Changed version number to 2.0 beta 2 (sjouke)
- Added check for 1 to 1 relation indi-fam in sanitycheck (sjouke)
- Fixed DEBUG constant not set in install (sjouke)
- Fixed custompage contains obsolete quote (sjouke)
- Fixed config_maint cannot delete system config (sjouke)