@@ -9,6 +9,7 @@
 =====================================================================
 
 Version 2.0 beta 2
+- Fixed counters not working if Genmod is in subdir (sjouke) 
 - Fixed invalid ID throws SQL error (sjouke)
 - Added imageviewer resize image to fit in window (sjouke)
 - Added add source info to newly created families (sjouke)
